# blog

./: README.md  blog.cabal  deploy.sh  index.html  site.hs
css/: default.css
js/: highlight.pack.js
posts/: 2014-07-07-church-encoding.markdown  2014-07-17-ats-on-homebrew.markdown  2014-08-01-costate-comonad-coalgebras.markdown  2014-09-24-theorem-proving-in-haskell.markdown  2015-03-28-towards-division.markdown  2015-04-27-reflection-in-idris.markdown  2015-07-09-in-search-of-a-generalized-fold.markdown  2015-10-06-computing-domains.markdown  2015-10-08-encoding-unfolds.markdown  2015-10-10-nameless-terms-in-imperative-languages.markdown  2015-10-18-theories-and-parsing.markdown  2016-08-10-why-hott-matters.markdown  2016-09-20-fixed-points-of-gadts.markdown  2016-10-05-refining-types.markdown  2017-04-16-simulating-higher-kinded-types.markdown  2017-04-24-ludum-dare-38.markdown  2017-08-02-the-power-of-parametricity.md  2017-11-13-introduction-to-generating-functions.markdown  2018-03-09-zhegalkin-polynomials.markdown
templates/: default.html  post-list.html  post.html
