name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , containers >= 0.5.7.1 && < 1.0
                  , pandoc >= 1.19.2.1 && < 2.0
  ghc-options:      -threaded
  default-language: Haskell2010
